ControllerにRecipeのHandlerを追加

--- a/spike-app/templates/index.html
+++ b/spike-app/templates/index.html
@@ -9,6 +9,6 @@
 
   <body>
     <h1>Welcome to Spike App</h1>
-    <p><a href="/recipes/new">Create Recipe</a></p>
+    <button onclick="location.href='/recipes/new'">Create Recipe</button>
   </body>
 </html>
