--- a/spike-app/templates/index.html
+++ b/spike-app/templates/index.html
@@ -8,7 +8,35 @@
   </head>
 
   <body>
-    <h1>Welcome to Spike App</h1>
-    <button onclick="location.href='/recipes/new'">Create Recipe</button>
+    <h1>レシピ一覧</h1>
+    <button onclick="location.href='/recipes/new'">新しいレシピを作成</button>
+    {{if .recipes}}
+    <table border="1">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>レシピ名</th>
+          <th>人数</th>
+          <th>調理時間（分）</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{range .recipes}}
+        <tr>
+          <td>{{.ID}}</td>
+          <td>{{.Title}}</td>
+          <td>{{.Servings}}人分</td>
+          <td>{{.CookingTime}}分</td>
+          <td>
+            <a href="/recipes/{{.ID}}">詳細</a>
+          </td>
+        </tr>
+        {{end}}
+      </tbody>
+    </table>
+    {{else}}
+    <p>登録されたレシピがありません。</p>
+    {{end}}
   </body>
 </html>
