Update button text for creating a new recipe to English

--- a/spike-app/templates/index.html
+++ b/spike-app/templates/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>レシピ一覧</h1>
-    <button onclick="location.href='/recipes/new'">新しいレシピを作成</button>
+    <button onclick="location.href='/recipes/new'">Create Recipe</button>
     {{if .recipes}}
     <table border="1">
       <thead>
