--- a/spike-app/templates/new_recipes.html
+++ b/spike-app/templates/new_recipes.html
@@ -17,7 +17,7 @@
 
       <label>
         調理時間（分）：
-        <input type="number" name="cook_time" min="0" step="1" required />
+        <input type="number" name="cooking_time" min="0" step="1" required />
       </label>
       <br /><br />
 
